--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -24,7 +24,7 @@ jobs:
         distribution: 'corretto'
         server-id: central
         server-username: ${{ secrets.MAVEN_USERNAME }}
-        server-password: ${{ secrets.MAVEN_TOKEN }}
+        server-password: ${{ secrets.MAVEN_CENTRAL_TOKEN }}
         gpg-private-key: ${{ secrets.MAVEN_GPG_PRIVATE_KEY }}
         gpg-passphrase: ${{ secrets.MAVEN_GPG_PASSPHRASE }}
 
@@ -35,5 +35,5 @@ jobs:
       run: mvn deploy -s $GITHUB_WORKSPACE/settings.xml
       env:
         MAVEN_USERNAME: ${{ secrets.MAVEN_USERNAME }}
-        MAVEN_CENTRAL_TOKEN: ${{ secrets.MAVEN_TOKEN }}
+        MAVEN_CENTRAL_TOKEN: ${{ secrets.MAVEN_CENTRAL_TOKEN }}
         MAVEN_GPG_PASSPHRASE: ${{ secrets.MAVEN_GPG_PASSPHRASE }}
