--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,9 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-gpg-plugin</artifactId>
                 <version>3.1.0</version>
+                <configuration>
+
+                </configuration>
                 <executions>
                     <execution>
                         <id>sign-artifacts</id>
@@ -86,6 +89,7 @@
                                 <arg>--no-tty</arg>
                                 <arg>--pinentry-mode</arg>
                                 <arg>loopback</arg>
+                                <arg>--detach-sign</arg>
                                 <arg>--verbose</arg>
                                 <arg>--debug-level=basic</arg>
                             </gpgArguments>
